Thu Dec 30 19:28:16 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/odbc/sql2tds.c src/tds/threadsafe.c:
	- fix time shift problem

Thu Dec 30 19:18:05 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/Makefile.am src/odbc/unittests/test64.c:
	- add small test for 64bit problems

Thu Dec 30 19:10:58 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/common.c src/dblib/unittests/t0013.c:
	* src/dblib/unittests/t0014.c:
	- improve dbmoretext tests

Thu Dec 30 15:53:06 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/sybdb.h src/dblib/unittests/t0007.c:
	- correct t0007 test (still broken), fix DBVARYCHAR declaration

Thu Dec 30 14:06:25 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/typeinfo.c:
	- check WVARCHAR result and no pending data

Thu Dec 30 13:41:44 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/data.c: test Sybase DATE and TIME

Thu Dec 30 13:04:41 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/unittests/Makefile.am src/tds/unittests/common.h:
	* src/tds/unittests/utf8_1.c src/tds/unittests/utf8_3.c:
	* src/tds/unittests/utf8.c(added):
	- move to_utf8 function to new utf8.c file

Tue Dec 28 15:36:41 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac include/tds_sysdep_private.h:
	* m4/sprintf_i64_format.m4 src/odbc/odbc.c src/tds/convert.c:
	* src/tds/numeric.c src/tds/token.c:
	- use C99 constant for printf format string

Thu Dec 23 10:32:02 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/buffering.h src/dblib/dblib.c: dblib indicator is DBINT

Tue Dec 21 11:53:40 EST 2010	JK Lowden <jklowden@freetds.org>
	* src/apps/bsqldb.c src/apps/tsql.c src/dblib/dblib.c
	- allow Kerberos/sspi connections without username

Thu Dec 16 20:24:00 CST 2010    Craig A. Berry <craigberry@mac.com>
        * vms/getpass.c Base VMS getpass/readline on stdin, not SYS$COMMAND.
